--- a/style products/style.css
+++ b/style products/style.css
@@ -102,4 +102,4 @@ li {
 .btn-primary:hover {
   background-color: #f5c518;
   color: #0d1117;
-}/*# sourceMappingURL=styl.css.map */
+}/*# sourceMappingURL=style.css.map */
